[tool.poetry]
name = "tidepool-loader"
version = "0.1.0"
description = ""
authors = ["CoultonF <cjrfraser@gmail.com>"]
readme = "README.md"
packages = [{include = "tidepool_loader"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
pandas = "^1.5.3"
python-dotenv = "^1.0.0"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
